# simpleSDL

./: .gitignore  CMakeLists.txt  get_dependencies.sh
source/: game.cxx  game.hxx  main.c  main.cxx
source/TileDataUi/: CMakeLists.txt  TileData.cxx  TileData.hxx  TileDataUi.cxx  TileDataUi.hxx  TileDataUi.ui  TileSetDataUi.ui  main.cxx
source/engine/: audioMixer.cxx  audioMixer.hxx  engine.cxx  engine.hxx  eventManager.cxx  eventManager.hxx  map.cxx  map.hxx  resourcesManager.cxx  resourcesManager.hxx  sprite.cxx  sprite.hxx  tileManager.cxx  tileManager.hxx  uiManager.cxx  uiManager.hxx  windowManager.cxx  windowManager.hxx
source/engine/GameObjects/: mapNode.cxx  mapNode.hxx
source/engine/android/: android_fopen.cxx  android_fopen.hxx
source/engine/audio/: music.cxx  music.hxx  soundEffect.cxx  soundEffect.hxx
source/engine/basics/: camera.cxx  camera.hxx  compression.hxx  isoMath.cxx  isoMath.hxx  log.hxx  mapEdit.cxx  mapEdit.hxx  point.hxx  settings.cxx  settings.hxx  signal.hxx  tileData.hxx  timer.cxx  timer.hxx  utils.cxx  utils.hxx
source/engine/common/: Constants.hxx
source/engine/ui/basics/: Layout.cxx  Layout.hxx  buttonGroup.cxx  buttonGroup.hxx  uiElement.cxx  uiElement.hxx
source/engine/ui/menuGroups/: IMenuGroup.hxx  MenuGroupBuild.cxx  MenuGroupBuild.hxx
source/engine/ui/widgets/: Image.cxx  Image.hxx  bar.cxx  bar.hxx  button.cxx  button.hxx  checkbox.cxx  checkbox.hxx  combobox.cxx  combobox.hxx  frame.cxx  frame.hxx  text.cxx  text.hxx  textField.cxx  textField.hxx  tooltip.cxx  tooltip.hxx
source/old/: main.c
